--- a/index.html
+++ b/index.html
@@ -483,7 +483,9 @@
             </p>
           </div>
           <div class="form-container">
-            <div class="form-image"></div>
+            <div class="form-image">
+              <img src="img/projects/send-emai.jpg" alt="Send Email Image"/>
+            </div>
             <div class="form-page">
               <form action="https://formspree.io/f/xqkngpry" method="post" class="form">
                 <div class="form-group group-bg">
