Made changes to index file

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <h2 class="text-secondary">Full-stack Developer,</h2>
           <p>With a passion for building highly scalable web applications</p>
           <a
-            href="https://docs.google.com/document/d/1y_5gLkVOfghNFdU68rFyKDVjFyzzfvcw96CTXwqLQDU/edit?usp=sharing"
+            href="https://drive.google.com/file/d/1U9jiHAjYgbC23QZIWPWyRahWAfYtlKnm/view?usp=sharing"
             class="btn"
             >Resume</a
           >
@@ -190,20 +190,19 @@
           <!-- Page 1 -->
           <article class="project-content">
             <div class="project-image project-image-one">
-              <img src="./img/projects/doc.PNG" alt="ClinixGo" />
+              <img src="./img/projects/SpaceX.PNG" alt="ClinixGo" />
               <a
                 class="btn btn-one"
-                href="https://clinixgo-production.up.railway.app/"
+                href="https://6399e6cd2fbcf003620ebd93--beamish-faloodeh-c1b8d5.netlify.app/"
                 target="_blank"
                 >Preview Link</a
               >
             </div>
 
             <div class="card-content">
-              <h2>ClinixGo</h2>
+              <h2>SpaceX</h2>
               <p>
-                The project is based on an app to book an appointment with a
-                health specialist(Doctor).
+                SpaceX is an application that pulls data from the SpaceX API. The application will allow users to book rockets and join selected space missions.
               </p>
               <div class="project-info">
                 <div class="stack">
@@ -211,18 +210,16 @@
                   <small class="language">CCS3</small>
                   <small class="language">JavaScript</small>
                   <small class="language">React & Redux</small>
-                  <small class="language">Ruby on Rails</small>
-                  <small class="language">Postgresql</small>
                 </div>
 
                 <div class="project-links">
                   <a
-                    href="https://github.com/Strangeal/ClinixGo"
+                    href="https://github.com/Paul-js-hub/react-redux-group-project"
                     target="_blank"
                     ><i class="fab fa-github"></i
                   ></a>
                   <a
-                    href="https://github.com/Strangeal/ClinixGo"
+                    href="https://6399e6cd2fbcf003620ebd93--beamish-faloodeh-c1b8d5.netlify.app/"
                     target="_blank"
                     ><i class="fas fa-external-link-alt"></i
                   ></a>
@@ -234,38 +231,37 @@
           <!-- Page 2 -->
           <article class="project-content">
             <div class="project-image project-image-one">
-              <img src="./img/projects/calculator.PNG" alt="Math Magicians" />
+              <img src="./img/projects/Budget.PNG" alt="Budget App" />
               <a
                 class="btn btn-two"
-                href="https://math-magician-application.herokuapp.com/"
+                href="https://intense-headland-23669.herokuapp.com/"
                 target="_blank"
                 >Preview Link</a
               >
             </div>
 
             <div class="card-content">
-              <h2>Math Magicians</h2>
+              <h2>Budget App</h2>
               <p>
-                A simple calculator is for all fans of mathematics. It is a
-                Single Page App (SPA) that allows users to make simple
-                calculations and read random math-related quotes.
+                A mobile web application that allow users to manage their budget.
               </p>
               <div class="project-info">
                 <div class="stack">
                   <small class="language">HTML5</small>
                   <small class="language">CSS3</small>
-                  <small class="language">JavaScript</small>
-                  <small class="language">React</small>
+                  <small class="language">Ruby</small>
+                  <small class="language">Rails</small>
+                  <small class="language">Postgresql</small>
                 </div>
 
                 <div class="project-links">
                   <a
-                    href="https://github.com/Paul-js-hub/math-magicians"
+                    href="https://github.com/Paul-js-hub/budget"
                     target="_blank"
                     ><i class="fab fa-github"></i
                   ></a>
                   <a
-                    href="https://math-magician-application.herokuapp.com/"
+                    href="https://intense-headland-23669.herokuapp.com/"
                     target="_blank"
                     ><i class="fas fa-external-link-alt"></i
                   ></a>
@@ -317,7 +313,7 @@
               <img src="./img/projects/bookstore.PNG" alt="Bookstore Project" />
               <a
                 class="btn btn-four"
-                href="https://github.com/Paul-js-hub/bookstore"
+                href="https://paul-js-hub.github.io/bookstore/"
                 target="_blank"
                 >Preview Link</a
               >
@@ -364,13 +360,6 @@
                 title="Github"
                 ><span class="fab fa-github"></span
               ></a>
-              <a
-                href="https://africa-metadata.herokuapp.com/"
-                target="_blank"
-                rel="no-opener no-referrer"
-                title="Live Preview"
-                ><span class="fas fa-external-link-alt"></span
-              ></a>
             </div>
             <header>
               <h3>Africa Countries</h3>
@@ -381,35 +370,6 @@
             <ul>
               <li class="language">HTML5</li>
               <li class="language">CSS3</li>
-              <li class="language">JavaScript</li>
-              <li class="language">React</li>
-              <li class="language">Redux</li>
-            </ul>
-          </div>
-          <div class="card">
-            <div class="icon-header">
-              <a
-                href="https://github.com/Paul-js-hub/react-redux-group-project"
-                title="Github"
-                target="_blank"
-                rel="no-opener no-referrer"
-                ><span class="fab fa-github"></span
-              ></a>
-              <a
-                href="https://6399e6cd2fbcf003620ebd93--beamish-faloodeh-c1b8d5.netlify.app/"
-                title="Live Preview"
-                target="_blank"
-                rel="no-opener no-referrer"
-                ><span class="fas fa-external-link-alt"></span
-              ></a>
-            </div>
-            <header>
-              <h3>SpaceX</h3>
-              <p>SpaceX is an application that pulls data from the SpaceX API. The application will allow users to book rockets and join selected space missions.</p>
-            </header>
-            <ul>
-              <li class="language">HTML</li>
-              <li class="language">CSS</li>
               <li class="language">JavaScript</li>
               <li class="language">React</li>
               <li class="language">Redux</li>
@@ -434,6 +394,32 @@
             <ul>
               <li class="language">HTML</li>
               <li class="language">CSS</li>
+              <li class="language">Ruby</li>
+              <li class="language">Rails</li>
+              <li class="language">Postgresql</li>
+            </ul>
+          </div>
+          <div class="card">
+            <div class="icon-header">
+              <a
+                href="https://github.com/Strangeal/ClinixGo"
+                target="_blank"
+                rel="no-opener no-referrer"
+                title="Github"
+                ><span class="fab fa-github"></span
+              ></a>
+            </div>
+            <header>
+              <h3>ClinixGo</h3>
+              <p>
+                A web app to book an appointment with a health specialist(Doctor).
+              </p>
+            </header>
+            <ul>
+              <li class="language">HTML</li>
+              <li class="language">CSS</li>
+              <li class="language">React</li>
+              <li class="language">Redux</li>
               <li class="language">Ruby</li>
               <li class="language">Rails</li>
               <li class="language">Postgresql</li>
@@ -479,7 +465,7 @@
             <p>
               If you have an application you are interested in developing, a
             feature that you need built or a project that needs coding. I’d love
-            to help with it.
+            to help with it. Kindly email me at <b>oncherahesbom@gmail.com</b>.
             </p>
           </div>
           <div class="form-container">
