Made changes to index file

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                   <a href="https://github.com/Paul-js-hub/bookstore" target="_blank"
                     ><i class="fab fa-github"></i
                   ></a>
-                  <a href="https://github.com/Paul-js-hub/bookstore" target="_blank"
+                  <a href="https://paul-js-hub.github.io/bookstore/" target="_blank"
                     ><i class="fas fa-external-link-alt"></i
                   ></a>
                 </div>
