--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="content-text">
           <h1>Paul Onchera<span class="underline"></span></h1>
           <h2 class="text-secondary">Full-stack Developer,</h2>
-          <p>With a passion for building highly scalable web applications</p>
+          <p>With a passion for building highly scalable web applications.</p>
           <a
             href="https://drive.google.com/file/d/1U9jiHAjYgbC23QZIWPWyRahWAfYtlKnm/view?usp=sharing"
             class="btn"
